--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "chatGPT api for bot",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "openai": "^3.1.0",
+    "openai-api": "^1.3.1",
+    "telebot": "^1.4.1",
     "telegraf": "^4.11.2"
   }
 }
